--- a/dev.html
+++ b/dev.html
@@ -37,19 +37,17 @@
 <script>
 $.extend(spring.config, {
   // my blog title
-  title: 'Spring',
+  title: '彷徨的灵魂',
   // my blog description
-  desc: "A blog engine written by GitHub Issues  \n[Fork me on GitHub](https://github.com/zhaoda/spring)",
+  desc: "「No Game No Life」",
   // my github username
-  owner: 'zhaoda',
+  owner: 'angelsouloo ',
   // creator's username
-  creator: 'zhaoda',
+  creator: 'angelsouloo',
   // the repository name on github for writting issues
-  repo: 'spring',
+  repo: 'angelsouloo.github.io',
   // custom page
   pages: [
-    {name: 'About Spring', number: 1},
-    {name: 'Quick Start', number: 2}
   ]
 })
 </script>
