--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <script>
 $.extend(spring.config, {
   // my blog title
-  title: '彷徨的灵魂',
+  title: '彷徨者',
   // my blog description
-  desc: "「No Game No Life」",
+  desc: "「No Pain No Gain」",
   // my github username
   owner: 'angelsouloo',
   // creator's username
