增加多说评论和一言

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="x5-orientation" content="portrait" />
 <meta name="x5-fullscreen" content="true" />
 <meta name="x5-page-mode" content="app" />
-<title>Spring is a blog engine written by github issues</title>
+<title>记忆碎片</title>
 <link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-57x57.png" />
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-114x114.png" />
 <link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-114x114.png" />
@@ -22,7 +22,7 @@
 <script>
 $.extend(spring.config, {
   // my blog title
-  title: '彷徨者',
+  title: '记忆碎片',
   // my blog description
   desc: "「No Pain No Gain」",
   // my github username
@@ -43,5 +43,15 @@ $.extend(spring.config, {
 location.href = 'https://github.com/' + spring.config.owner + '/' + spring.config.repo + '/issues?page=1&state=open'
 </script>
 <![endif]-->
+<script type="text/javascript">
+var duoshuoQuery = {short_name:"angelsouloo"};
+  (function() {
+    var ds = document.createElement('script');
+    ds.type = 'text/javascript';ds.async = true;
+    ds.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') + '//static.duoshuo.com/embed.js';
+    ds.charset = 'UTF-8';
+    (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(ds);
+  })();
+</script>
 </body>
 </html>
