动态加载多说+百度统计

--- a/dev.html
+++ b/dev.html
@@ -51,6 +51,17 @@ $.extend(spring.config, {
   ]
 });
 </script>
+<!-- analysis begin -->
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?f824778cbfdd90a3fa0637ee2cf8576a";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+<!-- analysis end -->
 </head>
 <body>
 <!--[if lt IE 9]>
